objects/Commission_Eligible_Quotes__c.object
<CustomObject>
    <fields>
        <fullName>AMMangerApproval__c</fullName>
        <label>AMMangerApproval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved By AM1</fullName>
                </value>
                <value>
                    <fullName>Approved By AM2</fullName>
                </value>
                <value>
                    <fullName>Approved By AM3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_CEQ_Approval_Status__c</fullName>
        <description>US27028</description>
        <label>AM CEQ Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Pending Response From AM Initial Comp</fullName>
                </value>
                <value>
                    <fullName>Approved By AM Initial Comp</fullName>
                </value>
                <value>
                    <fullName>Pending Response From AM Final Comp</fullName>
                </value>
                <value>
                    <fullName>Approved By AM Final Comp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Manager_1_Multiplier_Percentage__c</fullName>
        <label>Account Manager 1 Multiplier Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager_1_Proration_Percentage__c</fullName>
        <description>US27428</description>
        <label>Account Manager 1 Proration Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager_2_Multiplier_Percentage__c</fullName>
        <label>Account Manager 2 Multiplier Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager_2_Proration_Percentage__c</fullName>
        <description>US27428</description>
        <label>Account Manager 2 Proration Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US27028</description>
        <label>Account Manager 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commission_Eligible_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_3_Multiplier_Percentage__c</fullName>
        <label>Account Manager 3 Multiplier Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager_3_Proration_Percentage__c</fullName>
        <description>US27428</description>
        <label>Account Manager 3 Proration Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commission_Eligible_Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US27028, US27428</description>
        <label>Account Manager 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commission_Eligible_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <description>US27028</description>
        <formula>Quote_Name__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <description>US27028</description>
        <formula>Quote_Name__r.DivisionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>Quote_Name__r.GroupNumber__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US27028</description>
        <label>Group Number</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Commission Eligible Quotes</relationshipLabel>
        <relationshipName>Commission_Eligible_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Commissions__c</fullName>
        <description>US27028</description>
        <label>Internal Commissions</label>
        <referenceTo>Internal_Commission__c</referenceTo>
        <relationshipLabel>Commission Eligible Quotes</relationshipLabel>
        <relationshipName>Commission_Eligible_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US27028</description>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Commission Eligible Quotes</relationshipLabel>
        <relationshipName>Commission_Eligible_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpdateWhenAMApprovesrecord__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This Field gets updated when anyone of the AM1,AM2 or AM3 approves the record</description>
        <label>UpdateWhenAMApprovesrecord</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Commission Eligible Quotes</label>
    <nameField>
        <displayFormat>CEQTE-{00000}</displayFormat>
        <label>Commission Eligible Quotes Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Eligible Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CEQ_VR1_AMPercentageShouldNotExceed100</fullName>
        <active>true</active>
        <description>US27428(Callidus Moockups_1-11-19 says that the Percentage fields should not exceed more than 100%)</description>
        <errorConditionFormula>OR(
(Account_Manager_1_Proration_Percentage__c &gt; 100),(Account_Manager_2_Proration_Percentage__c &gt; 100),
(Account_Manager_3_Proration_Percentage__c &gt;100),
(Account_Manager_1_Proration_Percentage__c + Account_Manager_2_Proration_Percentage__c + Account_Manager_3_Proration_Percentage__c &gt;100),
(Account_Manager_1_Proration_Percentage__c + Account_Manager_2_Proration_Percentage__c &gt;100),
Account_Manager_2_Proration_Percentage__c + Account_Manager_3_Proration_Percentage__c &gt;100,
Account_Manager_1_Proration_Percentage__c + Account_Manager_3_Proration_Percentage__c &gt;100)</errorConditionFormula>
        <errorMessage>Account Manager Split Percentage Cannot Exceed 100%</errorMessage>
    </validationRules>
</CustomObject>